# daedalus

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  flake.nix  signal_dictionary.dict
.agent/rules/: daedalus.md
.claude/: settings.local.json
.github/workflows/: ci.yml  coverage.yml
docs/: daedalus_bootstrap_guide.md
docs/implementation_plans/: phase1_completion.md  phase2_signal_plotter.md  phase3_playback_console.md
include/daedalus/: app.hpp
include/daedalus/data/: signal_buffer.hpp  signal_tree.hpp  telemetry_queue.hpp
include/daedalus/protocol/: client.hpp  schema.hpp  telemetry.hpp
include/daedalus/views/: console.hpp  controls.hpp  inspector.hpp  plotter.hpp
scripts/: build.sh  bump_version.sh  ci.sh  coverage.sh  dev.sh  install-hooks.sh  run.sh  test.sh
src/: main.cpp
src/daedalus/: app.cpp
src/daedalus/data/: signal_tree.cpp
src/daedalus/protocol/: client.cpp  schema.cpp
src/daedalus/views/: console.cpp  controls.cpp  inspector.cpp  plotter.cpp
tests/: test_main.cpp
tests/data/: test_signal_buffer.cpp  test_signal_tree.cpp  test_telemetry_queue.cpp
tests/protocol/: test_client.cpp  test_schema.cpp  test_telemetry.cpp
tests/views/: test_console.cpp  test_controls.cpp  test_inspector.cpp  test_plotter.cpp
